@@ -1,5 +1,6 @@
 package com.stbegradleapp.fixer;
 
+import com.stbegradleapp.fixer.controllers.rest.AttributeRepository;
 import com.stbegradleapp.fixer.model.ClientOrder;
 import com.stbegradleapp.fixer.model.FixerUser;
 import com.stbegradleapp.fixer.model.UserRole;
@@ -7,7 +8,6 @@ import com.stbegradleapp.fixer.model.params.AttrType;
 import com.stbegradleapp.fixer.model.params.ListValue;
 import com.stbegradleapp.fixer.model.params.OrderAttribute;
 import com.stbegradleapp.fixer.model.params.OrderParameter;
-import com.stbegradleapp.fixer.repositories.AttributeRepository;
 import com.stbegradleapp.fixer.repositories.ClientOrderRepository;
 import com.stbegradleapp.fixer.repositories.FixerUserRepository;
 import com.stbegradleapp.fixer.repositories.OrderParameterRepository;
@@ -16,11 +16,7 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.Bean;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.Arrays;
-import java.util.LinkedList;
 import java.util.List;
 
 @SpringBootApplication
@@ -29,6 +25,7 @@ public class FixerApplication {
     public static void main(String[] args) {
         SpringApplication.run(FixerApplication.class, args);
     }
+
 
     @Bean
     public CommandLineRunner testApp(FixerUserRepository userRepository,
@@ -52,11 +49,7 @@ public class FixerApplication {
             ListValue tv = new ListValue("Телевизор");
             ListValue washingMachine = new ListValue("Стиральная Машинка");
             ListValue stove = new ListValue("Газовая плита");
-            List<ListValue> equipments = new LinkedList<ListValue>();
-            equipments.add(fridge);
-            equipments.add(tv);
-            equipments.add(washingMachine);
-            equipments.add(stove);
+            List<ListValue> equipments = List.of(fridge, tv, washingMachine, stove);
             OrderAttribute equipment = new OrderAttribute("Что чиним", AttrType.LIST, equipments);
 
             OrderAttribute description = new OrderAttribute("Напишите что произошло", AttrType.TEXT);
@@ -66,7 +59,7 @@ public class FixerApplication {
             OrderAttribute clientName = new OrderAttribute("Ваше Имя", AttrType.TEXT);
             OrderAttribute phoneNumber = new OrderAttribute("Ваш номер телефона", AttrType.PHONE_NUMBER);
             OrderAttribute address = new OrderAttribute("Ваш Адрес", AttrType.ADDRESS);
-            List<OrderAttribute> listAttrsThatShouldBeInSystem = Arrays.asList(
+            List<OrderAttribute> listAttrsThatShouldBeInSystem = List.of(
                     equipment, description, photo, dateAttr, clientName, phoneNumber,address
             );
             OrderParameter dateParam = new OrderParameter(dateAttr, "24/09/2020");
@@ -74,7 +67,7 @@ public class FixerApplication {
             OrderParameter eqParam = new OrderParameter(equipment, "холодильник");
             OrderParameter photoParam = new OrderParameter(photo, "photo");
             ClientOrder svetlanaOrder = new ClientOrder(
-                    Arrays.asList(dateParam, descriptionParam, photoParam, eqParam),
+                    List.of(dateParam, descriptionParam, photoParam, eqParam),
                     sveta,
                     genadii);
 
@@ -82,17 +75,17 @@ public class FixerApplication {
             clientOrderRepository.save(svetlanaOrder);
             Iterable<FixerUser> all = userRepository.findAll();
             System.out.println(String.format("all: %S", all));
-
         };
     }
 
-    @Bean
-    public WebMvcConfigurer corsConfigurer() {
-        return new WebMvcConfigurer() {
-            @Override
-            public void addCorsMappings(CorsRegistry registry) {
-                registry.addMapping("/fixer/api/attrs").allowedOrigins("http://localhost:3000");
-            }
-        };
-    }
+
+//    @Bean
+//    public WebMvcConfigurer corsConfigurer() {
+//        return new WebMvcConfigurer() {
+//            @Override
+//            public void addCorsMappings(CorsRegistry registry) {
+//                registry.addMapping("/fixer/api/attrs").allowedOrigins("http://localhost:3000");
+//            }
+//        };
+//    }
 }
